--- a/styles/style.css
+++ b/styles/style.css
@@ -8,24 +8,298 @@
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
-
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color:#f2f2f2;
+  display: flex;
+  align-items: center;
+  position: relative;
   /* выше установили ограничения для секции */
 }
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+.logo{
+  align-self: center;
+  z-index: 1;
 }
-
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  width: 183px;
+  height: 32px;
+}
+.header__title{
+  width: 730px;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: bold;
+  margin-left: 64px;
+  z-index: 2;
+}
+.header__subtitle{
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  margin: auto;
+}
+.header__link{
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+}
+.header__main-illustration{
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+.header__square-pic{
+  background-color: #2f80ed;
+  width: 568px;
+  height: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  box-sizing: border-box;
+}
+.description{
+  background-color: white;
+  width: 80%;
+  margin: 100px auto;
+}
+.two-columns{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.two-columns__brief{
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+  font-weight: normal;
+  width: 175px;
+  margin: 0;
+}
+.two-columns__main-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 784px;
+  width: 80%;
+}
+.two-columns__paragraph{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+.two-columns__paragraph:last-child{
+  margin-bottom: 0;
+}
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.digits{
+  background-color: white;
+  margin-bottom: 100px;
+}
+.section-title{
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: bold;
+  width: 60%;
+  text-align: center;
+  margin: auto;
+}
+.section-subtitle{
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  width: 60%;
+  text-align: center;
+  margin: auto;
+  margin-top: 20px;
+}
+.table{
+  display: flex;
+  width: 1100px;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: auto;
+  padding: 0;
+}
+.table__cell{
+  display: flex;
+  width: 250px;
+  flex-direction: column;
+  margin-top: 60px;
+}
+.table__heading{
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+  margin: 0;
+}
+.table__text{
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+.feynman{
+  background-color:#f2f2f2;
+  min-height: 890px;
+  position: relative;
+  margin: 0 auto 100px;
+  display: flex;
+  flex-direction: column;
+}
+.feynman__title{
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  width: 648px;
+  display: flex;
+  z-index: 1;
+  margin: 100px auto 70px;
+  text-align: center;
+}
+.feynman__subtitle{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  z-index: 2;
+  margin: 0;
+}
+.feynman__link{
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+.feynman__main_illustration{
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+.kaufman{
+  background-color: #1f1f1f;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 90px;
+}
+.table_theme_dark {
   color: white;
-  margin-right: 0;
+}
+.table__section-title_theme_dark{
+  color: white;
+  width: 60%;
+  margin-top: 90px;
+}
+.table__section-subtitle_theme_dark{
+  color: white;
+  width: 60%;
+  margin-top: 20px;
+}
+.kaufman__triangle{
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 0;
+}
+.table__cell_theme_dark{
+  width: 200px;
   margin-top: 80px;
+}
+.table__heading_theme_dark{
+  z-index: 1;
+}
+.table__text_theme_dark{
+  z-index: 1;
+}
+.footer{
+  background-color: #1f1f1f;
+  min-height: 350px;
+  display: flex;
+}
+.footer__columns{
+  margin: 60px auto 40px;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  justify-content: space-between;
+}
+.footer__column_content_copyright{
+  display: flex;
+  margin-left: 0;
+  margin-top: 0;
+  flex-direction: column;
+  flex-basis: 711px;
+}
+.logo_place_footer{
+  width: 183px;
+  height: 35px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.footer__author{
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin: 18px auto 18px;
+}
+.footer__column-links{
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+}
+.footer__column-heading{
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+.footer__column-link{
+  display: flex;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  margin: auto 10px auto 0;
 }
