--- a/styles/style.css
+++ b/styles/style.css
@@ -16,11 +16,12 @@
   display: flex;
   align-items: center;
   position: relative;
+  z-index: 1;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 .logo{
   align-self: center;
-  z-index: 1;
 }
 .logo_place_header {
   position: absolute;
@@ -30,12 +31,13 @@
   height: 32px;
 }
 .header__title{
+  margin:0;
+  padding:0;
   width: 730px;
   font-size: 102px;
   line-height: 96px;
   font-weight: bold;
   margin-left: 64px;
-  z-index: 2;
 }
 .header__subtitle{
   position: absolute;
@@ -52,6 +54,7 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
+  color: #2f80ed;
 }
 .header__main-illustration{
   width: 765px;
@@ -59,7 +62,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  z-index: 1;
+  z-index: -1;
 }
 .header__square-pic{
   background-color: #2f80ed;
@@ -69,6 +72,7 @@
   top: 64px;
   right: 0;
   box-sizing: border-box;
+  z-index: -2;
 }
 .description{
   background-color: white;
@@ -138,6 +142,7 @@
   justify-content: space-between;
   margin: auto;
   padding: 0;
+  flex-wrap: wrap;
 }
 .table__cell{
   display: flex;
@@ -162,7 +167,7 @@
   background-color:#f2f2f2;
   min-height: 890px;
   position: relative;
-  margin: 0 auto 100px;
+  margin: 0 auto 0;
   display: flex;
   flex-direction: column;
 }
@@ -194,8 +199,9 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  color: #2f80ed;
 }
-.feynman__main_illustration{
+.feynman__main-illustration{
   width: 867px;
   height: 637px;
   position: absolute;
@@ -207,38 +213,39 @@
   background-color: #1f1f1f;
   overflow: hidden;
   position: relative;
-  padding-bottom: 90px;
+  padding: 90px 0 90px;
+  z-index: 1;
 }
 .table_theme_dark {
   color: white;
 }
-.table__section-title_theme_dark{
+.section-title_theme_dark{
   color: white;
   width: 60%;
-  margin-top: 90px;
 }
-.table__section-subtitle_theme_dark{
+.section-subtitle_theme_dark{
   color: white;
   width: 60%;
   margin-top: 20px;
 }
 .kaufman__triangle{
+  background-image: url(../images/kaufman-triangle.svg);
   width: 877px;
   height: 877px;
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 0;
+  z-index: -1;
 }
 .table__cell_theme_dark{
   width: 200px;
   margin-top: 80px;
 }
 .table__heading_theme_dark{
-  z-index: 1;
+  color: white;
 }
 .table__text_theme_dark{
-  z-index: 1;
+  color: white;
 }
 .footer{
   background-color: #1f1f1f;
@@ -253,34 +260,34 @@
   position: relative;
   justify-content: space-between;
 }
-.footer__column_content_copyright{
+.footer__column{
   display: flex;
+  flex-direction: column;
+}
+.footer__column_content_copyright{
   margin-left: 0;
   margin-top: 0;
-  flex-direction: column;
   flex-basis: 711px;
+  justify-content: space-between;
 }
 .logo_place_footer{
   width: 183px;
   height: 35px;
-  position: absolute;
-  top: 0;
-  left: 0;
+  align-self: flex-start;
 }
 .footer__author{
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
   color: white;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  margin: 18px auto 18px;
+  margin: 18px 0 18px;
 }
 .footer__column-links{
+  margin-top: 0;
   margin-bottom: 16px;
   display: flex;
   flex-direction: column;
+  padding-left: 0;
 }
 .footer__column-heading{
   line-height: 30px;
@@ -297,6 +304,8 @@
   font-size: 18px;
   font-weight: normal;
   color: white;
+  list-style-type: none;
+  text-decoration: none;
 }
 .footer__social-icon{
   width: 16px;
