--- a/styles/style.css
+++ b/styles/style.css
@@ -75,13 +75,14 @@
 }
 .description{
   background-color: white;
-  width: 80%;
   margin: 100px auto;
 }
 .two-columns{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  width: 80%;
+  margin: 0 auto;
 }
 .two-columns__brief{
   line-height: 1.2;
@@ -199,6 +200,7 @@
   align-items: center;
   text-decoration: none;
   color: #2f80ed;
+  z-index: 3;
 }
 .feynman__main-illustration{
   width: 867px;
@@ -235,6 +237,7 @@
   top: 0;
   right: -210px;
   z-index: -1;
+  background-size: contain;
 }
 .table__cell_theme_dark{
   width: 200px;
@@ -287,6 +290,7 @@
   display: flex;
   flex-direction: column;
   padding-left: 0;
+  list-style-type: none;
 }
 .footer__column-heading{
   line-height: 30px;
@@ -303,7 +307,6 @@
   font-size: 18px;
   font-weight: normal;
   color: white;
-  list-style-type: none;
 }
 .footer__social-icon{
   width: 16px;
