--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,4 +1,3 @@
-@import url(../../rotation/rotation.css);
 .header__square-pic{
   background-color: #2f80ed;
   width: 568px;
@@ -8,5 +7,5 @@
   right: 0;
   box-sizing: border-box;
   z-index: -2;
+  animation: rotation 20s linear infinite;
 }
-
