--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -1,4 +1,4 @@
-.header__square-pic{
+.header__square-pic.rotation{
   background-color: #2f80ed;
   width: 568px;
   height: 568px;
@@ -7,5 +7,4 @@
   right: 0;
   box-sizing: border-box;
   z-index: -2;
-  animation: rotation 20s linear infinite;
 }
