--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,4 +1,4 @@
-.kaufman__triangle{
+.kaufman__triangle.rotation{
   background-image: url(../../../images/kaufman-triangle.svg);
   width: 877px;
   height: 877px;
@@ -7,5 +7,4 @@
   right: -210px;
   z-index: -1;
   background-size: contain;
-  animation: rotation 20s linear infinite;
 }
