--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,6 +5,7 @@
   color: #2f80ed;
   text-decoration: none;
   transition: color 1s ease;
+  align-self: flex-start;
 }
 .khan__buy-link:hover{
   opacity: 0.3;
