--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -3,7 +3,7 @@
   line-height: 34px;
   font-weight: normal;
   width: 60%;
-  text-align: center;
-  margin: auto;
+  margin: 0;
+  display: inline-block;
   margin-top: 20px;
 }
