--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -3,6 +3,6 @@
   line-height: 1.15;
   font-weight: bold;
   width: 60%;
-  text-align: center;
-  margin: auto;
+  margin: 0;
+  display: inline-block;
 }
