--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,4 +1,4 @@
-.kaufman__triangle.rotation{
+.kaufman__triangle{
   background-image: url(../../../images/kaufman-triangle.svg);
   width: 877px;
   height: 877px;
